# OptionsApp

./: README.md
backend/: pyproject.toml
options/: README.md
options/backend/: README.md  pyproject.toml
options/backend/src/options/: auth.py  firestore.py  main.py  polygon_interface.py
options/frontend/: App.js  README.md  app.json  firebase.js  package-lock.json  package.json
options/frontend/app/(tabs)/: index.tsx
options/frontend/hooks/: useGoogleAuth.ts
options/frontend/src/components/: GoogleLoginButton.js
options/frontend/src/screens/: LoginScreen.js
