[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Justan Provence",email = "41265104+JustanProvence@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
polygon-api-client="1.14.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
